# prevent_speakers_automatically_closed

./: .pdm.toml  README.md  build.bat  changeVolume.py  create_blank_audio.py  main.py  push_prevent_speakers_automatically_closed.bat  pyproject.toml  run_exe_prevent_speakers_automatically_closed.vbs  run_exe_prevent_speakers_automatically_closed.vbs - 快捷方式.lnk  run_prevent_speakers_automatically_closed.bat  run_prevent_speakers_automatically_closed.vbs  run_prevent_speakers_automatically_closed.vbs - 快捷方式.lnk
